--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
-                            <h1>SaaS App HTML Landing Page</h1>
+                            <h1>Regicide Gaming</h1>
                             <p class="p-large">Use Tivo to automate your marketing actions in order to reach a much larger audience</p>
                             <a class="btn-solid-lg page-scroll" href="sign-up.html">SIGN UP</a>
                         </div> <!-- end of text-container -->
@@ -113,7 +113,7 @@
                     <div class="col-lg-6 col-xl-7">
                         <div class="image-container">
                             <div class="img-wrapper">
-                                <img class="img-fluid" src="images/header-software-app.png" alt="alternative">
+                                <img class="img-fluid" src="images/favicon.ico" alt="alternative">
                             </div> <!-- end of img-wrapper -->
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
