--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="col-lg-6 col-xl-7">
                         <div class="image-container">
                             <div class="img-wrapper">
-                                <img class="img-fluid" src="images/favicon.ico" alt="alternative">
+                                <img class="img-fluid" src="images/favicon.png" alt="alternative">
                             </div> <!-- end of img-wrapper -->
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
