--- a/footer.html
+++ b/footer.html
@@ -6,8 +6,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="footer-col first">
-                        <h4>About Tivo</h4>
-                        <p class="p-small">We're passionate about offering some of the best business growth services for start more words</p>
+                        <h4>About Regicide Gaming</h4>
+                        <p class="p-small">We're passionate about bringing you quality content to watch anytime, and anywhere</p>
                     </div>
                 </div> <!-- end of col -->
                 <div class="col-md-4">
@@ -16,7 +16,7 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Our business partners <a class="white" href="#your-link">startupguide.com</a></div>
+                                <div class="media-body">Our partners <a class="white" href="#your-link">gameplexsoftware.weebly.com</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
