--- a/header.html
+++ b/header.html
@@ -35,7 +35,7 @@
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Youtube</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Content Library</span></a>
+                            <a class="dropdown-item" href="content.html"><span class="item-text">Content Library</span></a>
                         </div>
                     </li>
                     <!-- end of dropdown menu -->
