--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ $("#popup").load("./popup.html");
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
                             <h1>Regicide Gaming</h1>
-                            <p class="p-large">Use Tivo to automate your marketing actions in order to reach a much larger audience</p>
+                            <p class="p-large">Providing Quality content for viewers everywhere.</p>
                             <a class="btn-solid-lg page-scroll" href="sign-up.html">SIGN UP</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
