--- a/index.html
+++ b/index.html
@@ -179,21 +179,7 @@ XBOX Elite controller</br>
 OBS (recording software)</br>
 Cyberlink premium (editor)</br>
 </p>
-                                        <ul class="list-unstyled li-space-lg">
-                                            <li class="media">
-                                                <i class="fas fa-square"></i>
-                                                <div class="media-body">Create and embed on websites newsletter sign up forms</div>
-                                            </li>
-                                            <li class="media">
-                                                <i class="fas fa-square"></i>
-                                                <div class="media-body">Manage forms and landing pages for your services</div>
-                                            </li>
-                                            <li class="media">
-                                                <i class="fas fa-square"></i>
-                                                <div class="media-body">Add and remove subscribers using the control panel</div>
-                                            </li>
-                                        </ul>
-                                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">LIGHTBOX</a>
+                                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">More Information</a>
                                     </div> <!-- end of text-container -->
                                 </div> <!-- end of col -->
                             </div> <!-- end of row -->
@@ -294,22 +280,16 @@ Cyberlink premium (editor)</br>
                     <p>It's very easy to start using Tivo. You just need to fill out and submit the Sign Up Form and you will receive access to the app.</p>
                     <ul class="list-unstyled li-space-lg">
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">List building framework</div>
+                            <i class="fas fa-square"></i><div class="media-body">Minecraft</div>
                         </li>
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Easy database browsing</div>
+                            <i class="fas fa-square"></i><div class="media-body">Roblox</div>
                         </li>
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">User administration</div>
+                            <i class="fas fa-square"></i><div class="media-body">Fortnite</div>
                         </li>
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Automate user signup</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Quick formatting tools</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Fast email checking</div>
+                            <i class="fas fa-square"></i><div class="media-body">Call of duty</div>
                         </li>
                     </ul>
                     <a class="btn-solid-reg mfp-close" href="sign-up.html">SIGN UP</a> <a class="btn-outline-reg mfp-close as-button" href="#screenshots">BACK</a>
@@ -336,23 +316,10 @@ Cyberlink premium (editor)</br>
                     <p>It's very easy to start using Tivo. You just need to fill out and submit the Sign Up Form and you will receive access to the app.</p>
                     <ul class="list-unstyled li-space-lg">
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">List building framework</div>
+                            <i class="fas fa-square"></i><div class="media-body">Minecraft</div>
                         </li>
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Easy database browsing</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">User administration</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Automate user signup</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Quick formatting tools</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Fast email checking</div>
-                        </li>
+                            <i class="fas fa-square"></i><div class="media-body">Roblox</div>
                     </ul>
                     <a class="btn-solid-reg mfp-close" href="sign-up.html">SIGN UP</a> <a class="btn-outline-reg mfp-close as-button" href="#screenshots">BACK</a>
                 </div> <!-- end of col -->
