--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ Cyberlink premium (editor)</br>
                                        
                                     </div> <!-- end of image-wrapper -->
                                     <div class="text-wrapper">
-                                        <div class="testimonial-text"this is so good i subbed.</div>
+                                        <div class="testimonial-text"this is so good i subbed."</div>
                                         <div class="testimonial-author">-squirtle32</div>
                                     </div> <!-- end of text-wrapper -->
                                 </div> <!-- end of swiper-slide -->
