--- a/login.html
+++ b/login.html
@@ -26,8 +26,8 @@
     </div>
     <script type="text/javascript">
       var oktaSignIn = new OktaSignIn({
-        baseUrl: "https://tristanpoland.github.io",
-        clientId: "0oa3ftq9en5MZpIN05d6",
+        baseUrl: "dev-3414889.okta.com",
+        clientId: "0oa3fst8tVbqfIQ4b5d6",
         authParams: {
           issuer: "default",
           responseType: ['token', 'id_token'],
