--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
     </div>
     <script type="text/javascript">
       var oktaSignIn = new OktaSignIn({
-        baseUrl: "dev-3414889.okta.com",
+        baseUrl: "https://dev-3414889.okta.com",
         clientId: "0oa3fst8tVbqfIQ4b5d6",
         authParams: {
           issuer: "default",
