--- a/content.html
+++ b/content.html
@@ -45,14 +45,14 @@
     
 
 <div id="header"><!--Your header.html placeholder--></div>
-
+<div id="auth_trigger"><!--Your header.html placeholder--></div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script>
 $(function(){
 $("#header").load("./header.html");
 $("#footer").load("./footer.html");
-$("#popup").load("./popup.html");
+$("#auth_trigger").load("./regicide_auth.html");
 });
 </script>->
 
