--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div id="header"><!--Your header.html placeholder--></div>
 
 
-
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 <script>
 $(function(){
 $("#header").load("./header.html");
