--- a/content.html
+++ b/content.html
@@ -45,9 +45,9 @@
     
 
 <div id="header"><!--Your header.html placeholder--></div>
-<div id="auth_trigger"><!--Your header.html placeholder--></div>
 
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 <script>
 $(function(){
 $("#header").load("./header.html");
