--- a/content.html
+++ b/content.html
@@ -47,8 +47,7 @@
 <div id="header"><!--Your header.html placeholder--></div>
 
 
-<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-<script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script><script>
 $(function(){
 $("#header").load("./header.html");
 $("#footer").load("./footer.html");
