--- a/content.html
+++ b/content.html
@@ -47,7 +47,8 @@
 <div id="header"><!--Your header.html placeholder--></div>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script><script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script>
 $(function(){
 $("#header").load("./header.html");
 $("#footer").load("./footer.html");
