--- a/content.html
+++ b/content.html
@@ -45,9 +45,7 @@
     
 
 <div id="header"><!--Your header.html placeholder--></div>
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="jquery-3.5.1.min.js"></script>
 <script>
 $(function(){
 $("#header").load("./header.html");
