--- a/content.html
+++ b/content.html
@@ -45,10 +45,26 @@
     
 
 <div id="header"><!--Your header.html placeholder--></div>
+	
+    <!-- Header -->
+    <header id="header" class="ex-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Terms & Conditions</h1>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </header> <!-- end of ex-header -->
+    <!-- end of header -->
+	
+	
+	
+	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 $(function(){
-$("#header").load("./header.html");
+$("#header").load("./pgheader.html");
 $("#footer").load("./footer.html");
 });
 </script>->
