--- a/content.html
+++ b/content.html
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Terms & Conditions</h1>
+                    <h1>Content Library</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
